--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Creepster");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
-html, body {
+body {
+  background-color: #444;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
   overflow: hidden;
 }
-canvas {
-  background: radial-gradient(rgb(150, 200, 150), rgb(50, 100, 50));
+
+#container {
+  transform-origin: 50% 0;
 }
